[gd_scene load_steps=2 format=3 uid="uid://dcp3fv3jx7cp7"]

[ext_resource type="Script" uid="uid://ctllxbeimmbi6" path="res://PermPerkRow.gd" id="1_pg821"]

[node name="PermPerkRow" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 52)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
theme_override_constants/separation = 12
script = ExtResource("1_pg821")

[node name="BuyButton" type="Button" parent="."]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="DescLabel" type="Label" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="CostLabel" type="Label" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="Bar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(220, 10)
layout_mode = 2
show_percentage = false
